extraction of testcases from decompiled C
It seems to be working but is definitely not finished. This is a first step.